[package]
name = "rusb_async"
version = "0.5.1"
edition = "2024"

[dependencies]
atomic-waker = "1.1.2"
bitflags = "2.8.0"
bytes = "1.9.0"
compio-runtime = { version = "0.7.0", optional = true }
tokio = { version = "1.43.0", default-features = false, optional = true }
pin-project-lite = "0.2.16"
rusb = { git = "https://github.com/three014/rusb.git", version = "0.9.4" }
zerocopy = { version = "0.8.14", optional = true }
zerocopy-derive = { version = "0.8.14", optional = true }
flag = { version = "0.1.1", git = "https://github.com/three014/flag.git" }
compio-buf = "0.5.1"
compio-driver = "0.7.0"
# futures-util = { version = "0.3.31", default-features = false }
io-uring = "0.7.4"
libc = "0.2.171"
nohash-hasher = "0.2.0"
cooked-waker = "5.0.0"

[features]
default = ["runtime-compio"]
zerocopy = ["dep:zerocopy", "dep:zerocopy-derive"]
dma = []
runtime-tokio = ["tokio/rt"]
runtime-compio = ["compio-runtime/io-uring"]

[dev-dependencies]
tokio = { version = "1.43.0", default-features = false, features = ["macros", "rt", "rt-multi-thread", "time"] }

[patch.crates-io]
compio-runtime = { git = "https://github.com/three014/compio.git" }
compio-buf = { git = "https://github.com/three014/compio.git" }
compio-driver = { git = "https://github.com/three014/compio.git" }
